Improvements to mSys ZRF results from cmplxCruncher 1.1rc2, which leads to 0.1.0
On branch master
	modified:   mSys_MAIN.pdf
	modified:   mSys_MAIN.tex
	modified:   mSys_results.tex
	modified:   results/hist/IBS_h_A_amplicons_family_ZRFhist.pdf

--- a/mSystems/mSys_results.tex
+++ b/mSystems/mSys_results.tex
@@ -221,7 +221,9 @@ Additionally, for the unweighted fit, a complete residues analysis was performed
 \subsubsection*{Histogram Plots} 
 The \CC\ software generates two related histogram plots: absolute frequencies plot and zero relative frequency plot. The former is useful to visually assess the validity of the time points in terms of the accumulated absolute frequency of the elements (taxa), since absolute frequencies far (much higher or much lower) from those typically observed could mean a sampling problem. In Figure \ref{fig:histAFP} shows this histogram for the pre-treatment data (first 7 times) of patient ``D'' in the antibiotics study\cite{antibiotic}. We can see that there are no \emph{outlayers} among the total taxa sum for the sample points of this time series, so all of them were considered for further analysis by \CC.
 
-On the other hand, we could define the ZRF (Zero Relative Frequency, thereby ranging from 0 to 1) of an element (taxon) as the portion of times of the time series where the corresponding frequency is zero, i.e., such taxon is not found. Attending to all taxa, we can plot the ZRF histogram, which then lies on the horizontal axis of the plot, with the vertical axis showing the number of taxa. So, the height of a bar represents the amount of taxa that have determinate ZRF. In this respect, the bar over $0.0$ counts the quantity of taxa that are present at every time point of the data set (aka ``core''). In the same way, in the opposite case, the bar over $1.0$ would count the total of taxa that are never found, though this bar never appears in our plots since all these ``null'' elements are automatically filtered by the software. Figure \ref{fig:histZRF} shows this plot for the healthy patient A of the IBS study performed in our lab\cite{IBS}. There, we can see that $12$ taxa are present at all the time points of the time series while $9$ taxa basically appear only once. All in all, this plot is clearly useful to notice how the ``core'' is distributed.
+On the other hand, we could define the ZRF (Zero Relative Frequency, thereby ranging from 0 to 1) of an element (taxon) as the portion of times of the time series where the corresponding frequency is zero, i.e., such taxon is not found. The ZRF is useful for assessing how regularly is appearing the microbiota in the samples. In that sense, we define the ``core'' as the taxa that has a ZRF of less than 0.2, i.e., is present in more than the 80\% of the samples.
+
+Attending to all taxa in a dataset, we can plot the ZRF histogram, which then lies on the horizontal axis of the plot, with the vertical axis showing the number of taxa. So, the height of a bar represents the amount of taxa that have determinate ZRF. In this respect, the bar near $0$ counts the quantity of taxa that are present at every (or almost every) time point of the data set. In the same way, in the opposite case, the bar near $1$ counts the total of taxa that are scarcely found but present at least in one time (the software filters any taxon not appearing at any time). Figure \ref{fig:histZRF} shows this plot for the healthy patient A of the IBS study performed in our lab\cite{IBS}. There, we can see that $12$ taxa are present at all the time points of the time series while $9$ taxa basically appear only once. Ranging between those extremes, there are a significative amount of elements, $23$ taxa, appearing from often to seldom, but not belonging to the ``core'' region.
 	
 \begin{figure}		
 	\centering		
@@ -233,7 +235,7 @@ On the other hand, we could define the ZRF (Zero Relative Frequency, thereby ran
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\textwidth]{results/hist/IBS_h_A_amplicons_family_ZRFhist.pdf}
-	\caption{Histogram with the relative frequency of zero for the elements (taxa) in the data for patient A of the IBS study\cite{IBS}. In this particular case, the bar over $0.0$ counts the quantity of taxa that are present at every time point of the data set (``core''), while the bar over $1.0$ sums the total of taxa that are never found (this bar never appears because all these ``null'' elements are automatically filtered by \CC): here, $12$ taxa are present at all the time points of the time series while $9$ taxa basically appear only once.}
+	\caption{Histogram with the relative frequency of zero for the elements (taxa) in the data for patient A of the IBS study\cite{IBS}. In this particular case, the bar near $0$ counts the quantity of taxa that are present at almost every time point of the data set, while the bar near $1$ sums the total of taxa that are scarcely found: here, $12$ taxa are present at all the time points of the time series while $9$ taxa basically appear only once.}
 	\label{fig:histZRF}
 \end{figure}
 
